--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@
 @layer base {
   html {
     font-family: 'Raleway', sans-serif;
-    scroll-behavior: smooth;
+    --scroll-behavior: smooth!important;
+    scroll-behavior: smooth!important;
   }
 }
